# clap-ftxui-support

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: ftxui-clap-support-config.cmake.in
examples/: CMakeLists.txt
include/ftxui-clap-support/: ftxui-clap-editor.h
src/: embedded-terminal-linux.cpp  embedded-terminal-macos.mm  embedded-terminal-windows.cpp  embedded-terminal.cpp  embedded-terminal.h  ftxui-clap-support.cpp
test/: CMakeLists.txt
